--- a/DiscordDoomBot.csproj
+++ b/DiscordDoomBot.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MySqlConnector" Version="0.64.1"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0-preview.4.20251.6"/>
+    <PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.9"/>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Servers\"/>
