--- a/DiscordDoomBot.csproj
+++ b/DiscordDoomBot.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>MarineBot</AssemblyName>
+    <RootNamespace>MarineBot</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00687" />
