--- a/DiscordDoomBot.csproj
+++ b/DiscordDoomBot.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00743" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00743" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00743" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
     <PackageReference Include="MySqlConnector" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0-preview.4.20251.6" />
