--- a/DiscordDoomBot.csproj
+++ b/DiscordDoomBot.csproj
@@ -5,13 +5,21 @@
     <AssemblyName>MarineBot</AssemblyName>
     <RootNamespace>MarineBot</RootNamespace>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00751" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00751" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00751" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.22.2.1" />
     <PackageReference Include="MySqlConnector" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0-preview.4.20251.6" />
     <PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.9" />
   </ItemGroup>
