--- a/DiscordDoomBot.csproj
+++ b/DiscordDoomBot.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>MarineBot</AssemblyName>
     <RootNamespace>MarineBot</RootNamespace>
   </PropertyGroup>
@@ -12,13 +12,14 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00751" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00751" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00751" />
+    <PackageReference Include="DSharpPlus" Version="4.1.0-nightly-00870" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0-nightly-00870" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0-nightly-00870" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.22.2.1" />
     <PackageReference Include="MySqlConnector" Version="1.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NetCoreServer" Version="5.0.18" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0-preview.4.20251.6" />
     <PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.9" />
