updating after a long time. added voice music support with lavalink. fixed boorus

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,9 +32,8 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/DiscordDoomBot.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "--project",
+                "${workspaceFolder}/DiscordDoomBot.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
