--- a/DiscordDoomBot.csproj
+++ b/DiscordDoomBot.csproj
@@ -1,27 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>MarineBot</AssemblyName>
-    <RootNamespace>MarineBot</RootNamespace>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.1.0-nightly-00879" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0-nightly-00879" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0-nightly-00879" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
-    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.22.2.1" />
-    <PackageReference Include="MySqlConnector" Version="1.0.0" />
-    <PackageReference Include="NetCoreServer" Version="5.0.18" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0-preview.4.20251.6" />
-    <PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.9" />
-  </ItemGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<AssemblyName>MarineBot</AssemblyName>
+		<RootNamespace>MarineBot</RootNamespace>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01152"/>
+		<PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01152"/>
+		<PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01152"/>
+		<PackageReference Include="DSharpPlus.Lavalink" Version="4.3.0-nightly-01152"/>
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.43"/>
+		<PackageReference Include="Magick.NET-Q8-AnyCPU" Version="11.3.0"/>
+		<PackageReference Include="MySqlConnector" Version="2.1.11"/>
+		<PackageReference Include="NetCoreServer" Version="6.2.0"/>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0"/>
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0"/>
+		<PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.38"/>
+	</ItemGroup>
 </Project>
