--- a/DiscordDoomBot.csproj
+++ b/DiscordDoomBot.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>MarineBot</AssemblyName>
 		<RootNamespace>MarineBot</RootNamespace>
 	</PropertyGroup>
@@ -12,17 +12,17 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01152"/>
-		<PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01152"/>
-		<PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01152"/>
-		<PackageReference Include="DSharpPlus.Lavalink" Version="4.3.0-nightly-01152"/>
-		<PackageReference Include="HtmlAgilityPack" Version="1.11.43"/>
-		<PackageReference Include="Magick.NET-Q8-AnyCPU" Version="11.3.0"/>
-		<PackageReference Include="MySqlConnector" Version="2.1.11"/>
-		<PackageReference Include="NetCoreServer" Version="6.2.0"/>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-		<PackageReference Include="System.Drawing.Common" Version="6.0.0"/>
-		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0"/>
-		<PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.38"/>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="OpenAI" Version="1.7.2" />
+		<PackageReference Include="DSharpPlus" Version="4.4.2" />
+		<PackageReference Include="DSharpPlus.CommandsNext" Version="4.4.2" />
+		<PackageReference Include="DSharpPlus.Interactivity" Version="4.4.2" />
+		<PackageReference Include="DSharpPlus.Lavalink" Version="4.4.2" />
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.53" />
+		<PackageReference Include="MySqlConnector" Version="2.2.7" />
+		<PackageReference Include="NetCoreServer" Version="7.0.0" />
+		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
+		<PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.40" />
 	</ItemGroup>
 </Project>
